Incrementação do README e remoção de trechos comentados/inutilizados